--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
+    "jasmine-core": "^2.4.1",
     "lite-server": "^2.1.0",
     "typescript": "^1.8.7",
-    "typings":"^0.7.5",
-    "jasmine-core": "^2.4.1"
+    "typings": "^0.7.5"
   }
 }
