--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
-    "jasmine-core": "^2.4.1",
+    "es6-module-loader": "^0.17.11",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-systemjs": "^0.14.0",
     "lite-server": "^2.1.0",
+    "systemjs": "^0.19.31",
+    "systemjs-plugin-babel": "0.0.12",
     "typescript": "^1.8.7",
     "typings": "^0.7.5"
   }
