--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "todo-sam-incremental-dom",
-  "description": "Playing around with SAM pattern and incremental-dom",
+  "name": "todo-sam",
+  "description": "Playing around with SAM pattern",
   "version": "1.0.0",
   "scripts": {
     "start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
@@ -26,6 +26,6 @@
     "karma-systemjs": "^0.14.0",
     "lite-server": "^2.1.0",
     "typescript": "^1.8.7",
-    "typings": "^0.7.5"
+    "typings": "^1.3.2"
   }
 }
